fix: broken import links

--- a/pages/content-api/data-types/audiofile.mdx
+++ b/pages/content-api/data-types/audiofile.mdx
@@ -1,4 +1,4 @@
-import { PageCard } from "../../../components/PageCard";
+import { PageThumbnail } from '../../../components/PageThumbnail';
 import { PageItems } from "../../../components/PageItems";
 
 # AudioFile
@@ -34,7 +34,7 @@ The `AudioFile` type represents an audio file. It includes the file's metadata a
 ## Related Types
 
 <PageItems>
-  <PageCard
+  <PageThumbnail
     title="TextBlock"
     description="Transcribed text blocks"
     link="/content-api/data-types/textblock"
