--- a/pages/content-api/data-types/imageblock.mdx
+++ b/pages/content-api/data-types/imageblock.mdx
@@ -1,3 +1,6 @@
+import { PageItems } from '../../../components/PageItems';
+import { PageThumbnail } from '../../../components/PageThumbnail';
+
 # ImageBlock
 
 The `ImageBlock` type represents an image. It includes the image's metadata and any extracted information.
@@ -27,7 +30,7 @@ The `ImageBlock` type represents an image. It includes the image's metadata and 
 ## Related Types
 
 <PageItems>
-  <PageCard
+  <PageThumbnail
     title="TextBlock"
     description="Text extracted from the image"
     link="/content-api/data-types/textblock"
