--- a/pages/content-api/data-types/textblock.mdx
+++ b/pages/content-api/data-types/textblock.mdx
@@ -1,4 +1,4 @@
-import { PageCard } from "../../../components/PageCard";
+import { PageThumbnail } from '../../../components/PageThumbnail';
 import { PageItems } from "../../../components/PageItems";
 
 # TextBlock
@@ -24,7 +24,7 @@ The `TextBlock` type represents a block of text. It can be part of a larger docu
 ## Related Types
 
 <PageItems>
-  <PageCard
+  <PageThumbnail
     title="TextDocument"
     description="Parent document containing text blocks"
     link="/content-api/data-types/textdocument"
