--- a/pages/content-api/data-types/textdocument.mdx
+++ b/pages/content-api/data-types/textdocument.mdx
@@ -1,3 +1,6 @@
+import { PageItems } from '../../../components/PageItems';
+import { PageThumbnail } from '../../../components/PageThumbnail';
+
 # TextDocument
 
 The `TextDocument` type represents a text document. It includes the document's content, metadata, and any extracted information.
@@ -33,12 +36,12 @@ The `TextDocument` type represents a text document. It includes the document's c
 ## Related Types
 
 <PageItems>
-  <PageCard
+  <PageThumbnail
     title="TextBlock"
     description="Individual text blocks within the document"
     link="/content-api/data-types/textblock"
   />
-  <PageCard
+  <PageThumbnail
     title="ImageBlock"
     description="Images within the document"
     link="/content-api/data-types/imageblock"
