--- a/pages/content-api/data-types/discordmessage.mdx
+++ b/pages/content-api/data-types/discordmessage.mdx
@@ -1,4 +1,4 @@
-import { PageCard } from "../../../components/PageCard";
+import { PageThumbnail } from '../../../components/PageThumbnail';
 import { PageItems } from "../../../components/PageItems";
 
 # DiscordMessage
@@ -31,12 +31,12 @@ The `DiscordMessage` type represents a message from Discord. It includes the mes
 ## Related Types
 
 <PageItems>
-  <PageCard
+  <PageThumbnail
     title="TextBlock"
     description="Text content from the message"
     link="/content-api/data-types/textblock"
   />
-  <PageCard
+  <PageThumbnail
     title="ImageBlock"
     description="Images from attachments"
     link="/content-api/data-types/imageblock"
