--- a/pages/content-api/data-types/googledoc.mdx
+++ b/pages/content-api/data-types/googledoc.mdx
@@ -1,3 +1,6 @@
+import { PageItems } from '../../../components/PageItems';
+import { PageThumbnail } from '../../../components/PageThumbnail';
+
 # GoogleDoc
 
 The `GoogleDoc` type represents a Google Doc document. It includes the document's content, metadata, and any extracted information.
@@ -31,12 +34,12 @@ The `GoogleDoc` type represents a Google Doc document. It includes the document'
 ## Related Types
 
 <PageItems>
-  <PageCard
+  <PageThumbnail
     title="TextBlock"
     description="Individual text blocks within the document"
     link="/content-api/data-types/textblock"
   />
-  <PageCard
+  <PageThumbnail
     title="ImageBlock"
     description="Images within the document"
     link="/content-api/data-types/imageblock"
