--- a/pages/content-api/search/overview.mdx
+++ b/pages/content-api/search/overview.mdx
@@ -1,5 +1,5 @@
-1|import { PageCard } from "../../../components/PageCard";
-import { PageItems } from "../../../components/PageItems";
+import { PageItems } from '../../../components/PageItems';
+import { PageThumbnail } from '../../../components/PageThumbnail';
 
 # Search Overview
 
@@ -8,27 +8,27 @@ Unbody provides several search methods to help you find relevant content in your
 ## Available Methods
 
 <PageItems>
-  <PageCard
+  <PageThumbnail
     title="Semantic Search"
     description="Search based on meaning rather than exact matches"
     link="/content-api/search/semantic-search"
   />
-  <PageCard
+  <PageThumbnail
     title="Keyword Search"
     description="Search using exact keyword matches"
     link="/content-api/search/keyword-search"
   />
-  <PageCard
+  <PageThumbnail
     title="Hybrid Search"
     description="Combine semantic and keyword search"
     link="/content-api/search/hybrid-search"
   />
-  <PageCard
+  <PageThumbnail
     title="Visual Similarity"
     description="Find visually similar images"
     link="/content-api/search/visual-similarity"
   />
-  <PageCard
+  <PageThumbnail
     title="Record Similarity"
     description="Find similar records"
     link="/content-api/search/record-similarity"
@@ -79,4 +79,4 @@ const { data } = await unbody.get
 
 ## Next Steps
 
-Click on any search method above to learn more about its specific capabilities and usage. 
+Click on any search method above to learn more about its specific capabilities and usage.
