add sdk first projects

--- a/pages/concepts.mdx
+++ b/pages/concepts.mdx
@@ -66,4 +66,4 @@ Unbody is designed precisely for this world—making it straightforward to build
 With these foundational concepts clear, you're ready to explore how Unbody's architecture implements them technically, or jump right into building:
 
 - [→ See Unbody's Architecture](/architecture)
-- [→ Set up your first Unbody backend](/first-projects/overview)
+- [→ Set up your first Unbody backend](/first-project/overview)
