--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -15,9 +15,9 @@ No duct tape AI tooling. No pipelines made of glue. Just one composable system.
 *Think of it as the Supabase of the AI era.*
 
 ### Get started
-- <InlineThumbnail title="Build your first RAG for GoogleDocs" link="/first-projects/rag"/>
-- <InlineThumbnail title="Build your first Visual Search Engine (Google Drive)" link="/first-projects/visual-search" icon={<ScanSearch />} />
-- <InlineThumbnail title="Build your first AI Assistant (using Discord data)" link="/first-projects/ai-assistant" />
+- <InlineThumbnail title="Build your first RAG for GoogleDocs" link="/first-project/rag"/>
+- <InlineThumbnail title="Build your first Visual Search Engine (Google Drive)" link="/first-project/visual-search" icon={<ScanSearch />} />
+- <InlineThumbnail title="Build your first AI Assistant (using Discord data)" link="/first-project/ai-assistant" />
 
 --- 
 
