--- a/pages/generative-api/json-gen.mdx
+++ b/pages/generative-api/json-gen.mdx
@@ -1,6 +1,6 @@
 # JSON Generation API
 
-The `.generate.json()` method creates structured JSON content based on prompts, messages, or schemas. Use this for generating API responses, structured records, or documents.
+The `.generate.json()` method creates structured JSON content based on prompts, messages, or schemas. Use this for generating API responses, structured records, or documents with optional real-time streaming.
 
 ## Usage
 
@@ -53,6 +53,35 @@ unbody.generate.json(
 );
 ```
 
+### Example 4 - Streaming JSON Generation
+Generate structured JSON with real-time streaming:
+```typescript copy
+import { z } from "zod";
+
+const stream = await unbody.generate.json(
+  "Generate a detailed product catalog entry:",
+  {
+    schema: z.object({
+      productName: z.string(),
+      price: z.number(),
+      description: z.string(),
+      features: z.array(z.string()),
+    }),
+    stream: true,
+  }
+);
+
+for await (const chunk of stream) {
+  if (chunk.finished) {
+    console.log('Stream finished');
+    console.log('Final response:', chunk.content);
+    break;
+  } else {
+    console.log(chunk.content);
+  }
+}
+```
+
 ## Options
 - `schema`: Defines the structure of the output (plain JSON schema or Zod schema).
 - `model`: AI model to use (e.g., `gpt-4`).
@@ -61,3 +90,4 @@ unbody.generate.json(
 - `temperature`: Creativity adjustment (0 to 1).
 - `presencePenalty`: Penalize new tokens based on input presence (-2.0 to 2.0).
 - `frequencyPenalty`: Penalize tokens based on frequency of occurrence (-2.0 to 2.0).
+- `stream`: Enable streaming for real-time content generation (boolean).
